--- a/SportsTimetablingProblem.vcxproj
+++ b/SportsTimetablingProblem.vcxproj
@@ -144,7 +144,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Desktop\timetabling\timetabling\timetabling\tinyxml2.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\Desktop\timetabling\timetabling\timetabling\tinyxml2.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\..\..\Desktop\timetabling\timetabling\timetabling\ITC2021_Test1.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
