--- a/SportsTimetablingProblem.vcxproj.filters
+++ b/SportsTimetablingProblem.vcxproj.filters
@@ -32,4 +32,7 @@
       <Filter>Resource Files</Filter>
     </Xml>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="output.txt" />
+  </ItemGroup>
 </Project>
