--- a/SportsTimetablingProblem.vcxproj
+++ b/SportsTimetablingProblem.vcxproj
@@ -151,10 +151,10 @@
     <ClInclude Include="..\..\..\Desktop\timetabling\timetabling\timetabling\tinyxml2.h" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="..\..\..\Desktop\timetabling\timetabling\timetabling\ITC2021_Test1.xml" />
+    <Text Include="output.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="output.txt" />
+    <Xml Include="ITC2021_Test1.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
