--- a/SportsTimetablingProblem.vcxproj.filters
+++ b/SportsTimetablingProblem.vcxproj.filters
@@ -28,11 +28,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="..\..\..\Desktop\timetabling\timetabling\timetabling\ITC2021_Test1.xml">
-      <Filter>Resource Files</Filter>
-    </Xml>
+    <Text Include="output.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="output.txt" />
+    <Xml Include="ITC2021_Test1.xml" />
   </ItemGroup>
 </Project>
